[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/profile_settings/profile_create.gd" type="Script" id=1]

[node name="ProfileCreate" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_top = 0.00235697
anchor_bottom = 0.00235697
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
margin_left = 409.0
margin_top = 50.0
margin_right = 512.0
margin_bottom = 64.0
rect_scale = Vector2( 2, 2 )
text = "CREATE PROFILE"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_left = 367.0
margin_top = 116.0
margin_right = 657.0
margin_bottom = 313.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernameLabel" type="Label" parent="Panel/VBoxContainer"]
margin_right = 290.0
margin_bottom = 14.0
text = "Enter Username"

[node name="UsernameLineEdit" type="LineEdit" parent="Panel/VBoxContainer"]
margin_top = 18.0
margin_right = 290.0
margin_bottom = 42.0

[node name="PasswordLabel" type="Label" parent="Panel/VBoxContainer"]
margin_top = 46.0
margin_right = 290.0
margin_bottom = 60.0
text = "Enter Password"

[node name="PasswordLineEdit" type="LineEdit" parent="Panel/VBoxContainer"]
margin_top = 64.0
margin_right = 290.0
margin_bottom = 88.0
secret = true

[node name="ReenterPasswordLabel" type="Label" parent="Panel/VBoxContainer"]
margin_top = 92.0
margin_right = 290.0
margin_bottom = 106.0
text = "Re-Enter Password"

[node name="ReenterPasswordLineEdit" type="LineEdit" parent="Panel/VBoxContainer"]
margin_top = 110.0
margin_right = 290.0
margin_bottom = 134.0
secret = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Create" type="Button" parent="Panel/VBoxContainer"]
margin_top = 138.0
margin_right = 290.0
margin_bottom = 158.0
text = "Create Account"

[node name="Back" type="Button" parent="Panel/VBoxContainer"]
margin_top = 162.0
margin_right = 290.0
margin_bottom = 182.0
text = "Back"

[node name="ErrorLabel" type="Label" parent="Panel/VBoxContainer"]
margin_top = 186.0
margin_right = 290.0
margin_bottom = 200.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Username already exists"
align = 1

[node name="SuccessPanel" type="Panel" parent="Panel"]
visible = false
margin_left = 363.0
margin_top = 207.0
margin_right = 661.0
margin_bottom = 393.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/SuccessPanel"]
margin_left = 55.4374
margin_top = 50.9424
margin_right = 241.437
margin_bottom = 64.9424
text = "Account created successfully"

[node name="Button" type="Button" parent="Panel/SuccessPanel"]
margin_left = 122.861
margin_top = 97.39
margin_right = 169.861
margin_bottom = 117.39
text = "Close"
[connection signal="pressed" from="Panel/VBoxContainer/Create" to="." method="_on_Create_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Panel/SuccessPanel/Button" to="." method="_on_Close_pressed"]
